# sesivo

./: .gitattributes  404.html  AGENTS.md  CMakeLists.txt  CNAME  PRODUCTION_TODO.md  README.md  THIRD_PARTY_NOTICES.md  audio_packet.h  audio_packet_self_test.cpp  client.cpp  client_info.h  client_manager.h  docs.html  downloads.html  index.html  info.json  join_reliability_self_test.cpp  join_token_tool.cpp  llms.txt  packet_builder.h  performer_join_token.h  protocol.h  robots.txt  server.cpp  site.webmanifest  sitemap.txt  sitemap.xml  styles.css  wav_file_playback.h
.github/workflows/: ci.yml  server-release.yml  update-pages-downloads.yml
api/: example.json  servers.json
archive/md-artifacts/root/: LATENCY_AUDIT_2026-07-07.md  LATENCY_AUDIT_2026-07-09.md  LOW_LATENCY_ACTION_PLAN_2026-07-02.md  LOW_LATENCY_AUDIT_2026-07-02.md  LOW_LATENCY_AUDIT_2026-07-14.md  REAL_NETWORK_VALIDATION_2026-07-14.md  VPS_SETUP.md
cmake/: client.cmake  common.cmake  macos_client_info.plist.in  packaging.cmake  server.cmake  sesivo_version.h.in
docs/: README.md  client-server-hardening-notes.md  current-imgui-client-ui-inventory.md  general-cleanup-backlog.md  juce-gui-direction.md  latency-measurement.md  latency-phase1-evidence.md  local-audio-regression-roadmap.md  low-latency-audit-resolution.md  low-latency-local-validation.md  low-latency-operating-envelope.md  room-chat-design-notes.md
docs/archive/audits/: LATENCY_AUDIT_2026-07-09.md  LATENCY_FINDINGS.md  LOW_LATENCY_AUDIO_AUDIT.md  LOW_LATENCY_AUDIT_2026-07-02.md  LOW_LATENCY_AUDIT_2026-07-14.md  OPUS_COMPETITIVE_COMPLETION_AUDIT.md  audio-latency-stability-audit-tracker.md  audio-latency-stability-audit.md
docs/archive/evidence/: VPS_ROBOTIC_AUDIO_HANDOFF.md  low-latency-audit-resolution.md  low-latency-local-validation.md
docs/archive/legacy/: current-imgui-client-ui-inventory.md
docs/archive/legacy/listener/: LISTENER_V2_DOCKER.md  LISTENER_V2_HLS_ORIGIN.md  LISTENER_V2_IMPLEMENTATION_CHECKLIST.md  LISTENER_V2_ROADMAP.md  LISTENER_V2_VALIDATION.md  LISTENER_V3_IMPLEMENTATION_CHECKLIST.md  LISTENER_V3_ROADMAP.md
docs/archive/plans/: FEATURE_ROADMAP.md  general-cleanup-backlog-2026-07.md
docs/archive/plans/juce/: juce-gui-direction.md
docs/archive/plans/low-latency/: LOW_LATENCY_ACTION_PLAN_2026-07-02.md  LOW_LATENCY_TODO.md
docs/archive/plans/native-jam-engine/: NATIVE_JAM_ENGINE_ROADMAP.md  native-jam-engine-phase-1.md  native-jam-engine-phase-2.md  native-jam-engine-phase-3.md  native-jam-engine-phase-4.md  native-jam-engine-phase-5.md
docs/archive/plans/opus/: OPUS_COMPETITIVE_IMPLEMENTATION_CHECKLIST.md  OPUS_COMPETITIVE_ROADMAP.md
docs/archive/plans/production/: PRODUCTION_READINESS_ROADMAP.md  PRODUCTION_TODO_2026-07-10.md
docs/archive/plans/superpowers/: 2026-06-05-juce-audio-backend-migration.md  2026-07-02-phase0-1-ci-rt-safety.md  2026-07-02-phase3-e2e-latency.md  (+8 more)
docs/archive/runbooks/: OPUS_EXTERNAL_VALIDATION_RUNBOOK.md
docs/archive/specs/: community-jam-servers.md  native-jam-engine.md  native-room-auth-contract.md  product-server-integration.md  room-chat-design-notes.md
packaging/icons/: sesivo.icns
packaging/linux/: sesivo.desktop
packaging/macos/: dmg-layout.applescript  dmg_layout.applescript  entitlements.plist
packaging/windows/: sesivo.rc  sesivo.rc.in
src/client/: audio_analysis.h  audio_backend.h  audio_backend_policy.h  audio_callback_context.h  audio_callback_policy.h  audio_stream.cpp  audio_stream.h  client.cpp  client_app_facade.h  client_audio_devices.cpp  client_audio_devices.h  client_audio_state.cpp  client_audio_state.h  client_config_path.cpp  client_config_path.h  client_config_store.cpp  client_config_store.h  client_join_session.cpp  client_join_session.h  client_media_state.cpp  client_media_state.h  client_metronome.cpp  client_metronome.h  client_network_path.cpp  client_network_path.h  client_runtime.cpp  client_runtime.h  client_startup.cpp  client_startup.h  clock_offset_estimator.h  congestion_policy.h  delivery_report_feedback.h  delivery_stall_policy.h  gui.cpp  gui.h  http_json_fetch_job.cpp  http_json_fetch_job.h  imgui_client_ui.cpp  imgui_client_ui.h  imgui_client_ui.inl  (+34 more)
src/common/: audio_packet.h  crash_reporter.h  endpoint_hash.h  join_reliability.h  logger.h  logging_setup.cpp  logging_setup.h  message_validator.h  opus_network_clock.h  packet_builder.h  performer_join_token.h  periodic_timer.h  protocol.h  replay_window.h  sequence_tracker.h  session_crypto.h  udp_port.h  udp_socket_config.h
src/server/: client_info.h  client_manager.h  room_registry.h  server.cpp  server_config.h  server_metrics.h  server_options.h  server_rate_limiter.h
tests/: audio_analysis_self_test.cpp  audio_backend_policy_self_test.cpp  audio_callback_policy_self_test.cpp  audio_packet_self_test.cpp  client_config_store_self_test.cpp  client_manager_self_test.cpp  client_network_path_self_test.cpp  client_startup_self_test.cpp  clock_offset_estimator_self_test.cpp  congestion_policy_self_test.cpp  crash_reporter_self_test.cpp  delivery_stall_policy_self_test.cpp  jitter_policy_self_test.cpp  juce_audio_adapter_self_test.cpp  latency_preset_policy_self_test.cpp  logger_self_test.cpp  opus_network_clock_self_test.cpp  opus_tail_fade_self_test.cpp  packet_parser_fuzz.cpp  participant_manager_self_test.cpp  participant_packet_queue_self_test.cpp  periodic_timer_self_test.cpp  post_drop_rate_recovery_self_test.cpp  recording_writer_self_test.cpp  redundant_receive_policy_self_test.cpp  relay_load_probe.cpp  room_registry_self_test.cpp  secure_invite_self_test.cpp  sequence_tracker_self_test.cpp  server_metrics_self_test.cpp  server_options_self_test.cpp  server_rate_limiter_self_test.cpp  session_crypto_self_test.cpp  udp_port_self_test.cpp  udp_socket_config_self_test.cpp  wav_file_playback_self_test.cpp
tools/: dev-jam.mjs  dev-join-token.mjs  generate-app-icons.mjs  gh-release.mjs  install-server.sh  latency-measurement.mjs  package-macos.sh  package-windows.ps1  release-macos.sh  run-relay-capacity-sweep.mjs  run-relay-load-test.mjs  start-latency-soak.ps1
(+5 files in other folders)
